--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -284,6 +284,7 @@
     {% include "partials/footer.html" %}
   </div>
 
+  {% include "partials/callback_popup.html" %}
   {% include "partials/popup.html" %}
 
   <button class="scroll-to-top" id="scrollToTop" aria-label="Наверх">
