--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -313,6 +313,7 @@
     </svg>
   </button>
 
+  <script src="/js/cursor.js"></script>
   <script src="/js/script.js"></script>
   <script src="/js/popup.js"></script>
   <script src="/js/form-submit.js"></script>
